cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W -Wall -Wextra -pedantic -g -O3 -std=c++0x")
endif()
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIR} )
 
add_executable(combolane combolane.cpp )
target_link_libraries( combolane ${OpenCV_LIBS} )
